[package]
name = "kine-festival"
authors = ["Invisible Hand Labs Lda. <andreribeiro@invisiblehandlab.org>, kinera@invisiblehandlab.org>"]
edition = "2021"
version = "4.0.0-dev"


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
codec = { workspace = true, package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

serde = {  workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true, default-features = false}

kine-tags = { workspace = true }
kine-stat-tracker = { workspace = true }
kine-movie = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
pallet-balances = { workspace = true }



[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'scale-info/std',
	"pallet-balances/std",
	"kine-tags/std",
]

try-runtime = ['frame-support/try-runtime']
