[package]
name = "kine-moderation"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
codec = { workspace = true, package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

serde = {  workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true, default-features = false}

kine-tags = { workspace = true, default-features = false}
kine-stat-tracker = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'scale-info/std',
	'pallet-balances/std',
]

try-runtime = ['frame-support/try-runtime']
