[package]
name = "kine-ranking-list"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { workspace = true, package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

serde = {  workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }


kine-tags = { workspace = true, default-features = false }
kine-stat-tracker = { workspace = true }
kine-movie = { workspace = true, default-features = false }

# pallet-democracy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
# pallet-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
# pallet-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
# pallet-utility = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
# sp-std = {version = '4.0.0', default-features = false}
# getrandom = { version = "0.2.7", features = ["js"] }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false }



[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	# "pallet-staking/std",
	# "pallet-session/std",
	# "pallet-utility/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
