[package]
name = "kine-tags"
authors = ["Invisible Hand Labs Lda. <andreribeiro@invisiblehandlab.org>, kinera@invisiblehandlab.org>"]
edition = "2021"
version = "4.0.0-dev"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { workspace = true, package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }


[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }


[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
